--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>jdlGeneration</groupId>
     <artifactId>generation</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
     <dependencies>
