#297 Добавил поле Order к Проекциям

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -5,6 +5,7 @@
   "projectionsInfoes": [
     {
       "name": "New",
+      "order": 1,
       "filters": [
         {
           "field": "arhive",
@@ -22,6 +23,7 @@
     },
     {
       "name": "Inner",
+      "order": 2,
       "filters": [
         {
           "field": "status",
@@ -35,6 +37,7 @@
     },
     {
       "name": "Archive",
+      "order": 3,
       "filters": [
         {
           "field": "arhive",
