#299 Добавлена генерация урла для запроса

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -1,6 +1,7 @@
 {
   "registryCode": "userRegistry",
   "useEntityName": false,
+  "microservice": "partnerDocuments",
   "projectionsInfoes": [
     {
       "name": "New",
