#298 Добавлена точка в путь перевода

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -1,5 +1,5 @@
 {
-  "translationPath": "partnerGatewayApp.partnerDocuments",
+  "translationPath": "partnerGatewayApp.partnerDocuments.",
   "registryCode": "userRegistry",
   "useEntityName": false,
   "microservice": "partnerDocuments",
