#318 Добавлены игнорируемые поля

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -1,4 +1,5 @@
 {
+  "ignoreColumns": ["id"],
   "translationPath": "partnerGatewayApp.partnerDocuments",
   "registryCode": "userRegistry",
   "useEntityName": false,
