#334 Добавлены настройки и утилита конвертации слов

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -3,6 +3,8 @@
   "registryCode": "userRegistry",
   "useEntityName": false,
   "microservice": "partnerDocuments",
+  "pluralMenuItems": true,
+  "pluralPresentations": false,
   "projectionsInfoes": [
     {
       "name": "New",
