#334 Добавлена возможность выбирать множественное или единственное число у генераций

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -3,8 +3,8 @@
   "registryCode": "userRegistry",
   "useEntityName": false,
   "microservice": "partnerDocuments",
-  "pluralMenuItems": true,
-  "pluralPresentations": false,
+  "pluralTranslations": false,
+  "pluralPresentations": true,
   "projectionsInfoes": [
     {
       "name": "New",
