#340 Добавлена возможность выбрать множественное ли число у search url

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -5,6 +5,7 @@
   "microservice": "partnerDocuments",
   "pluralTranslations": false,
   "pluralPresentations": true,
+  "pluralSearchURL": true,
   "projectionsInfoes": [
     {
       "name": "New",
