#353 Добавлены переводы доп полям

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -7,6 +7,7 @@
   "pluralPresentations": true,
   "pluralSearchURL": true,
 
+  "additionalFieldsTranslationPath": "additionalFields",
   "additionalFields": [
     {
       "fieldName": "status",
