#368 Генерируется ссылка на перевод тайтла

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -1,5 +1,6 @@
 {
   "translationPath": "partnerGatewayApp.partnerDocuments",
+  "titlePath": "partnerGatewayApp.partnerDocuments<ENTITY_NAME>.home.title",
   "registryCode": "userRegistry",
   "useEntityName": false,
   "microservice": "partnerDocuments",
