#368 Добавлен тип данных Статус

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -12,7 +12,7 @@
   "additionalFields": [
     {
       "fieldName": "status",
-      "fieldType": "String",
+      "fieldType": "Status",
       "fieldLength": "12",
       "fieldLabel": "Статус",
       "jdlType": true,
