#828 Добавлено поле DocumentClassLabel

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -45,6 +45,15 @@
       "jdlType": true,
       "required": false,
       "hidden": true
+    },
+    {
+      "fieldName": "DocumentClassLabel",
+      "fieldType": "String",
+      "fieldLength": "25",
+      "fieldLabel": "Вид",
+      "jdlType": true,
+      "required": false,
+      "hidden": true
     }
   ],
 
