#828 Исправлена буква в documentClassLabel

--- a/gidSample.config.json
+++ b/gidSample.config.json
@@ -47,7 +47,7 @@
       "hidden": true
     },
     {
-      "fieldName": "DocumentClassLabel",
+      "fieldName": "documentClassLabel",
       "fieldType": "String",
       "fieldLength": "25",
       "fieldLabel": "Вид",
