#ISSUE-4 type of cofig properties changed to List

--- a/src/main/resources/generator-default-config.yaml
+++ b/src/main/resources/generator-default-config.yaml
@@ -3,8 +3,9 @@
 jdlConfig:
   mapStruct: true
   paginateType: infinite-scroll
-  generateServiceFor: all
+  generateServiceFor:
+    - all
   sourceFolder: ./csv-source-folder
-  targetFile: result.jh
+  targetFile: entities.jh
   targetResourceFolder: ./i8n
 
